crawling for applications, seeds of endpoints that will coordinate loads with external systems

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 logging.level.ca.bc.gov.nrs.cmdb.api=DEBUG
+logging.level.org.springframework=INFO
+
+cmdb.api.title=NRM CMDB API
+cmdb.api.description=Natural Resource Ministries' Configuration Management Database
+cmdb.api.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0
+cmdb.api.termsOfService.url=""
+cmdb.api.version=0.1.0
+cmdb.api.contact.name=Brenden Black
+cmdb.api.contact.url=https://www.cgi.com/en/canada
+cmdb.api.contact.email=brenden.m.black@cgi.com
+cmdb.api.license.name=Apache 2.0
+cmdb.api.license.url=https://www.apache.org/licenses/LICENSE-2.0
