--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.ca.bc.gov.nrs.cmdb.api=DEBUG
 logging.level.org.springframework=INFO
+logging.file=output.log
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %highlight(%-5level) %logger.%M - %msg%n
 
 cmdb.api.title=NRM CMDB API
 cmdb.api.description=Natural Resource Ministries' Configuration Management Database
