--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 logging.level.ca.bc.gov.nrs.cmdb.api=DEBUG
 logging.level.org.springframework=INFO
+spring.output.ansi.enabled=NEVER
 logging.file=output.log
-logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %highlight(%-5level) %logger.%M - %msg%n
+
 
 cmdb.api.title=NRM CMDB API
 cmdb.api.description=Natural Resource Ministries' Configuration Management Database
