--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.output.ansi.enabled=NEVER
 logging.file=output.log
 
 
+server.contextPath=/cmdbap
+springfox.documentation.swagger.v2.path=/api-docs
+
 cmdb.api.title=NRM CMDB API
 cmdb.api.description=Natural Resource Ministries' Configuration Management Database
 cmdb.api.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0
@@ -14,3 +17,10 @@ cmdb.api.contact.url=https://www.cgi.com/en/canada
 cmdb.api.contact.email=brenden.m.black@cgi.com
 cmdb.api.license.name=Apache 2.0
 cmdb.api.license.url=https://www.apache.org/licenses/LICENSE-2.0
+
+
+keycloak.auth-server-url=http://localhost:8180/auth
+keycloak.realm=SpringBootKeycloak
+keycloak.resource=login-app
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
