--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,3 +10,5 @@ ssh.solaris.password=${ssh.linux.password}
 
 logging.level.org.springframework=INFO
 logging.level.com.pastdev.jsch=WARN
+
+keycloak.enabled = false
