json build json reading

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ cmdb.api.contact.url=https://www.cgi.com/en/canada
 cmdb.api.contact.email=brenden.m.black@cgi.com
 cmdb.api.license.name=Apache 2.0
 cmdb.api.license.url=https://www.apache.org/licenses/LICENSE-2.0
+
+cmdb.jenkins.url=
+cmdb.jenkins.username=
+cmdb.jenkins.password=
