--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>jsch-nio</artifactId>
             <version>1.0.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.23.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
