--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>ca.bc.gov.nrs.cmdb</groupId>
     <artifactId>cmdb-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>cmdb-api</name>
     <description>Demo project for Spring Boot</description>
@@ -23,19 +23,18 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <springfox.version>2.8.0</springfox.version>
-        <keycloak.version>4.0.0.Beta1</keycloak.version>
+        <keycloak.version>4.0.0.Beta2</keycloak.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -43,30 +42,9 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-undertow</artifactId>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-neo4j</artifactId>
-        </dependency>
-
-        <!-- keycloak -->
-        <!--<dependency>-->
-            <!--<groupId>org.keycloak</groupId>-->
-            <!--<artifactId>keycloak-spring-boot-starter</artifactId>-->
-            <!--<version>${keycloak.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.keycloak</groupId>-->
-            <!--<artifactId>keycloak-tomcat8-adapter</artifactId>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-spring-security-adapter</artifactId>
-            <version>${keycloak.version}</version>
         </dependency>
 
         <dependency>
@@ -85,6 +63,19 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+
+
+
+        <!-- keycloak -->
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-spring-security-adapter</artifactId>
+            <version>${keycloak.version}</version>
+        </dependency>
+
+
+
+
 
         <dependency>
             <groupId>io.springfox</groupId>
@@ -127,7 +118,7 @@
         <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
         <!--</plugin>-->
         <!--</plugins>-->
-        <finalName>ROOT</finalName>
+        <!--<finalName>ROOT</finalName>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
