Keycloak integration works, vagrant does not

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ logging.level.org.springframework=INFO
 spring.output.ansi.enabled=NEVER
 logging.file=output.log
 
+#spring.data.rest.basePath=/api
 
 server.contextPath=/cmdbap
 springfox.documentation.swagger.v2.path=/api-docs
