--- a/vagrant/playbook.yml
+++ b/vagrant/playbook.yml
@@ -2,60 +2,55 @@
 - name: 'provision CMDB development box'
   hosts: all
   become: yes
-  become_user: vagrant
-  vars:
-    keycloak_version: '4.0.0.Beta2'
-    keycloak_archive: "keycloak-{{ keycloak_version }}.tar.gz"
-    keycloak_url: "https://downloads.jboss.org/keycloak/{{ keycloak_version }}/{{ keycloak_archive }}"
-  tasks:
-    - name: 'install Open JDK 8'
+
+  pre_tasks:
+    - name: 'packages are installed'
       yum:
-        name: 
+        name: "{{ item }}"
         state: present
       with_items:
         - 'gzip'
         - 'java-1.8.0-openjdk-devel'
         - 'tar'
-          
-    - name: "download Keycloak from {{ keycloak_url }}"
-      get_url:
-        url: "{{ keycloak_url }}"
-        dest: "/tmp/{{ keycloak_archive }}"
-      
-    - name: 'Wildfly group'
-      group:
-        name: 'wildfly'
-    
-    - name: 'Wildfly user'
-      user:
-        name: wildfly
-        group: wildfly
-        home: '/opt/wildfly'
-        shell: '/sbin/nologin'
-    
-    - name: 'Wildfly service configuration'
-      template:
-        src: 'wildfly.conf.j2'
-        dest: '/etc/default/wildfly'
-    
-    - name: 'Wildfly init.d'
-      template:
-        src: 'wildfly-init-redhat.sh.j2'
-        dest: '/etc/init.d/wildfly'
-  
-    - name: 'extract Keycloak'
-      unarchive:
-        src: "/tmp/{{ keycloak_archive }}"
-        dest: "/usr/keycloak-{{ keycloak_version }}"
-        creates: "/opt/keycloak-{{ keycloak_version }}/bin/standalone.sh"
-        owner: 'wildfly'
-        group: 'wildfly'
-  
-   - name: 'Keycloak log directory'
-     file:
-       path: '/var/log/wildfly'
-       state: 'directory'
-       owner: wildfly
-       group: wildfly
-       mode: 0755
 
+  roles:
+    - name: keycloak
+  
+  tasks: 
+    - name: 'wait for Keycloak to start up'
+      uri:
+        url: 'http://localhost:8080/auth/realms'
+        status_code: 401
+      register: result
+      until: result.status == 401
+      retries: 60
+      delay: 1
+
+    - name: 'fetch admin token'
+      uri:
+        url: 'http://localhost:8080/auth/realms/master/protocol/openid-connect/token'
+        method: 'POST'
+        body: 'username=admin&password=admin&grant_type=password&client_id=admin-cli'
+        status_code: 200
+        headers:
+          Content-Type: "application/x-www-form-urlencoded"
+      register: token
+
+    - debug:
+        var: token
+
+    # if the realm already exists, the service returns a 409; this should result in an "OK" status from Ansible
+    - name: 'create realm'
+      uri:
+        url: 'http://localhost:8080/auth/admin/realms/'
+        method: 'POST'
+        body: "{{ lookup('file', 'realm-export.json') }}"
+        body_format: 'json'
+        status_code: 201, 409
+        headers:
+          Authorization: "Bearer {{ token.content.access_token }}"
+          # Content-Type: 'application/json'
+      register: create_realm_result
+      changed_when: create_realm_result.status == 201
+
+    
