green tests for add and upsert builds

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,13 @@
             <artifactId>jsch-nio</artifactId>
             <version>1.0.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <version>1.1.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
