Green tests for Jenkins import, removed crawling functionality, implements a swagger workaround and adds a readme describing it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Project details
+cmdb.version=@pom.version@
+
 # Logging
 logging.level.ca.bc.gov.nrs.cmdb.api=DEBUG
 logging.level.org.springframework=INFO
